--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   # For macOS, it does not open asset files; the example uses network for loading PDF file
   flutter_cache_manager: ^3.3.1
 
+dependency_overrides:
+  js: ^0.6.7
+
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
